Serviço de autenticação implementado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,3 +48,4 @@ info.app.java.version=@java.version@
 
 # monitoramento-integra
 spring.boot.admin.client.url=http://172.17.0.3:8081
+integra.password.client=123456
