--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.datasource.hikari.max-lifetime=2000000
 spring.datasource.hikari.connection-timeout=60000
 
 integra.password=123456
+
+eureka.client.serviceUrl.defaultZone=http://integra-eureka:8761/eureka
+
