--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8082
+spring.application.name=integra-autorizacao
 
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.url=jdbc:mysql://177.53.17.218/Integra
@@ -17,6 +18,10 @@ spring.datasource.hikari.max-lifetime=2000000
 spring.datasource.hikari.connection-timeout=60000
 
 integra.password=123456
+
+#spring.cloud.service-registry.auto-registration.enabled=false
+#eureka.client.serviceUrl.registerWithEureka=false
+#eureka.client.enabled=false
 
 eureka.client.serviceUrl.defaultZone=http://integra-eureka:8761/eureka
 
