--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.url=jdbc:mysql://177.53.17.218/Integra
 spring.datasource.username=root
 spring.datasource.password=Voip_Nexus1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.jdbc.time_zone=America/Sao_Paulo
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -13,15 +14,15 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # Hikari will use the above plus the following to setup connection pooling
 spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.idle-timeout=30000
-spring.datasource.hikari.pool-name=calldashbi
+spring.datasource.hikari.pool-name=autorizacao
 spring.datasource.hikari.max-lifetime=2000000
 spring.datasource.hikari.connection-timeout=60000
 
 integra.password=123456
 
-#spring.cloud.service-registry.auto-registration.enabled=false
-#eureka.client.serviceUrl.registerWithEureka=false
-#eureka.client.enabled=false
+spring.cloud.service-registry.auto-registration.enabled=false
+eureka.client.serviceUrl.registerWithEureka=false
+eureka.client.enabled=false
 
-eureka.client.serviceUrl.defaultZone=http://integra-eureka:8761/eureka
+#eureka.client.serviceUrl.defaultZone=http://integra-eureka:8761/eureka
 
