--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,9 +20,9 @@ spring.datasource.hikari.connection-timeout=60000
 
 integra.password=123456
 
-spring.cloud.service-registry.auto-registration.enabled=false
-eureka.client.serviceUrl.registerWithEureka=false
-eureka.client.enabled=false
+#spring.cloud.service-registry.auto-registration.enabled=false
+#eureka.client.serviceUrl.registerWithEureka=false
+#eureka.client.enabled=false
 
-#eureka.client.serviceUrl.defaultZone=http://integra-eureka:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://integra-eureka:8761/eureka
 
