--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,6 @@ integra.password=123456
 #eureka.client.serviceUrl.registerWithEureka=false
 #eureka.client.enabled=false
 
-eureka.client.serviceUrl.defaultZone=http://integra-eureka:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://177.53.17.224:8761/eureka
 
 
