--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
 server.port=8082
 spring.application.name=integra-autorizacao
 
-spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.url=jdbc:mysql://177.53.17.218/Integra
+#spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.url=jdbc:mysql://177.53.17.218/Integra?serverTimezone=GMT-3
 spring.datasource.username=root
 spring.datasource.password=Voip_C2YX8M
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.properties.hibernate.jdbc.time_zone=America/Sao_Paulo
+spring.jpa.properties.hibernate.jdbc.time_zone=America/Fortaleza
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Hikari will use the above plus the following to setup connection pooling
